# Orion-sentinel-netsec-ai

./: .env.example  .gitignore  .yamllint  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_OLD.md  MIGRATION.md  Makefile  PLAN.md  PRODUCTION_READINESS.md  QUICKSTART.md  QUICKSTART_PRODUCTION.md  README.md  README.md.backup  README_NEW.md  REFACTOR_SUMMARY.md  compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml
backup/: README.md  backup-volumes.sh  restore-volume.sh
config/: playbooks.yml  playbooks.yml.example
config/grafana/: DASHBOARD_SUMMARY.md  README.md
config/suricata/: disable.conf  suricata.yaml
docs/: ai-accelerator.md  architecture-netsec.md  architecture.md  change-monitor.md  grafana-dashboards.md  health-score.md  host-logs.md  inventory.md  lab-mode.md  network-config.md  notifications.md  observability.md  operations.md  orionctl.md  quick-start.md  soar.md  threat-intel.md  update.md  validation.md  web-ui.md
docs/netsec/: README.md
grafana/dashboards/: orion-device-view.json  orion-security-overview.json  orion-soc-wallboard.json
grafana_dashboards/: README.md  dns-pihole.json
host/systemd/: README.md  orion-netsec-nic-tuning.service  orion-netsec-promisc.service
samples/: intel-events.json  suricata-eve.json
scripts/: backup-all.sh  bootstrap-netsec.sh  check-nvme.sh  install.sh  netsec-host-tune.sh  netsec-sync-config.sh  netsec-up.sh  orionctl  restore-all.sh  suricata-update.sh  upgrade.sh  validate-netsec.sh
src/orion_ai/: __init__.py
src/orion_ai/change_monitor/: __init__.py  analyzer.py  baseline.py  models.py  service.py
src/orion_ai/cli/: __init__.py  __main__.py  orionctl.py
src/orion_ai/events/: __init__.py  emitter.py  loki_client.py  models.py
src/orion_ai/health/: __init__.py  reporter.py
stacks/ai/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
stacks/nsm/: docker-compose.dev.yml  docker-compose.local-observability.yml  docker-compose.yml
stacks/tools/: .env.example  README.md
tests/: test_basic.py
(+87 files in other folders)
